--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -132,10 +132,10 @@
     <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的。</p>
         <p>注意，不支持项目文件夹</p></div>
     <div class="example">
-        <p>分支源码：https://github.com/hunshcn/project/archive/master.zip</p>
-        <p>分支文件：https://github.com/hunshcn/project/blob/master/filename</p>
-        <p>release源码：https://github.com/hunshcn/project/archive/v0.1.0.tar.gz</p>
-        <p>release文件：https://github.com/hunshcn/project/releases/download/v0.1.0/example.zip</p>
+        <p>分支源码：https://github.com/gedoor/legado/archive/refs/heads/master.zip</p>
+        <p>分支文件：https://github.com/gedoor/legado/blob/master/README.md</p>
+        <p>release源码：https://github.com/gedoor/legado/archive/refs/tags/3.21.080211.tar.gz</p>
+        <p>release文件：https://github.com/gedoor/legado/releases/download/3.21.080316/legado_app_3.21.080316.apk</p>
     </div>
 </form>
 <!-- <p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers，开源于GitHub <a style="color: #3294ea"
