--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -57,7 +57,7 @@
         width: 100%;
         bottom: 0;
         position: absolute;
-        background: #00bfb3;
+        background: #00c0b3;
         transition: 0.2s ease transform;
         -moz-transition: 0.2s ease transform;
         -webkit-transition: 0.2s ease transform;
@@ -70,7 +70,7 @@
 
     .btn {
         line-height: 38px;
-        background-color: #00bfb3;
+        background-color: #00933d;
         color: #fff;
         white-space: nowrap;
         text-align: center;
@@ -120,7 +120,7 @@
 
 
 <body class="flex"></body>
-<h1 style="margin-bottom: 50px"><img src="https://ae01.alicdn.com/kf/H2fc84859291347418b11091fe0e508b8v.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">GitHub 文件加速</h1>
+<h1 style="margin-bottom: 50px"><img src="https://z3.ax1x.com/2021/08/04/fAXThQ.png" style="width: 1.3em;margin-right: .3em;vertical-align: bottom;"><font color="#00933d">GitHub 文件加速</font><img src="https://z3.ax1x.com/2021/08/04/fAXThQ.png" style="width: 1.3em;margin-left: .3em;vertical-align: bottom;"></h1>
 <form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex" onsubmit="toSubmit(event)">
     <label class="block" style="width: fit-content">
         <input class="block url" name="q" type="text" placeholder="键入Github文件链接"
